--- a/.gitignore
+++ b/.gitignore
@@ -10,5 +10,11 @@ target/*
 *.war
 *.ear
 
+/appData/default.user@elseware.com/
+/appData/g01@doughmain.net/
 /appData/lex@doughmain.net/
+/appData/new.user@lcware.net/
+/appData/setup@testing.com/
+/appData/test.user@lcware.net/
+/appData/UniqueNewUser@lcware.net/
 /.css/
