--- a/pom.xml
+++ b/pom.xml
@@ -88,9 +88,9 @@
         </dependency>
 
         <dependency>
-            <groupId>net.sf.image4j</groupId>
-            <artifactId>codec</artifactId>
-            <version>0.7</version>
+            <groupId>com.carrotgarden.maven</groupId>
+            <artifactId>carrot-maven-image4j-plugin</artifactId>
+            <version>1.1.1</version>
         </dependency>
 
         <dependency>
