Library and data smithing.  Deconflicted NoteGroup viewing when Calendars are grouped.  Moved NoteGroup viewing to ide only.

--- a/mbDevData/jondo.nonamus@lcware.net/appOpts.json
+++ b/mbDevData/jondo.nonamus@lcware.net/appOpts.json
@@ -6,8 +6,8 @@
   "todoListsExpanded" : true,
   "searchesExpanded" : true,
   "groupCalendarNotes" : false,
-  "theSelection" : "Graduate",
-  "theSelectionRow" : 2,
+  "theSelection" : "Year View",
+  "theSelectionRow" : 12,
   "defaultDayNoteIconInfo" : {
     "dataArea" : "APP_ICONS",
     "iconName" : "icon_not",
