--- a/pom.xml
+++ b/pom.xml
@@ -88,15 +88,15 @@
         </dependency>
 
         <dependency>
-            <groupId>com.carrotgarden.maven</groupId>
-            <artifactId>carrot-maven-image4j-plugin</artifactId>
-            <version>1.1.1</version>
-        </dependency>
-
-        <dependency>
             <groupId>com.github.rjeschke</groupId>
             <artifactId>txtmark</artifactId>
             <version>0.13</version>
+        </dependency>
+
+        <dependency>
+            <groupId>net.sf.image4j</groupId>
+            <artifactId>codec</artifactId>
+            <version>0.7</version>
         </dependency>
 
     </dependencies>
