--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,6 @@
         <slf4jVersion>1.7.36</slf4jVersion>
     </properties>
 
-
     <build>
         <plugins>
             <plugin>
@@ -38,6 +37,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.jclarion</groupId>
+            <artifactId>image4j</artifactId>
+            <version>0.7</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
             <version>2.13.3</version>
@@ -47,6 +52,12 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.13.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>1.3.2</version>
         </dependency>
 
         <dependency>
@@ -91,12 +102,6 @@
             <groupId>com.github.rjeschke</groupId>
             <artifactId>txtmark</artifactId>
             <version>0.13</version>
-        </dependency>
-
-        <dependency>
-            <groupId>net.sf.image4j</groupId>
-            <artifactId>codec</artifactId>
-            <version>0.7</version>
         </dependency>
 
     </dependencies>
