Grooming jondo data.

--- a/mbDevData/jondo.nonamus@lcware.net/appOpts.json
+++ b/mbDevData/jondo.nonamus@lcware.net/appOpts.json
@@ -33,6 +33,6 @@
   "eventsList" : [ "Holidays", "Everything Else" ],
   "notesList" : [ ],
   "tasksList" : [ "Get New Job", "New Car Shopping" ],
-  "searchResultList" : [ "20201107080423", "20201107080501" ],
+  "searchResultList" : [ "Primatech", "Office" ],
   "paneSeparator" : 191
 }
