--- a/mbDevData/jondo.nonamus@lcware.net/appOpts.json
+++ b/mbDevData/jondo.nonamus@lcware.net/appOpts.json
@@ -6,8 +6,8 @@
   "todoListsExpanded" : true,
   "searchesExpanded" : true,
   "groupCalendarNotes" : false,
-  "theSelection" : "Day Notes",
-  "theSelectionRow" : 12,
+  "theSelection" : "Graduate",
+  "theSelectionRow" : 2,
   "defaultDayNoteIconInfo" : {
     "dataArea" : "APP_ICONS",
     "iconName" : "icon_not",
